# HelloCV

./: Git学习.md  Git配置.md  Linux命令行.md  Linux相关.md  OpenCV安装.md  README.md  README2.md  ROS2安装.md  VS Code开发环境配置.md
jiajiemi/modular_project/: CMakeLists.txt  README.md
jiajiemi/modular_project/include/crypto/: Crypto.h  FileHandler.h  Menu.h
jiajiemi/modular_project/src/: CMakeLists.txt  main.cpp
jiajiemi/modular_project/src/crypto/: Crypto.cpp  FileHandler.cpp  Menu.cpp
第三周实践任务/OpenCVtask/: CMakeLists.txt
第三周实践任务/OpenCVtask/src/: main.cpp
